# AegisSOC

./: .env.example  .gitignore  CREDENTIALS.txt  LICENSE  Makefile  README.md  docker-compose.yml  final-report.docx  pyproject.toml  report.docx
data/assets/: asset_criticality.json
data/graph/: state.json
data/intel/: asset_inventory.json  cisa_kev_sample.json  identity_map.json  misp_iocs.json
data/mitre/: technique_map.json
data/policy/: feedback_log.json
data/samples/: ad_auth.jsonl  cloudtrail.jsonl  edr_processes.jsonl  email_phishing.jsonl  firewall_dns.jsonl  k8s_audit.jsonl  suricata_alerts.jsonl  sysmon_events.jsonl  zeek_conn.jsonl  zeek_dns.jsonl  zeek_http.jsonl
data/scenarios/: benign_admin_false_positive.json  phishing_ransomware_chain.json  repeat_attacker_infra.json
data/sigma/: ad_kerberoasting_pattern.yml  c2_beacon_tls.yml  cloudtrail_iam_privilege_escalation.yml  cloudtrail_no_mfa_sensitive_action.yml  credential_dumping_indicators.yml  dns_tunneling_heuristic.yml  k8s_exec_secrets_access.yml  lateral_movement_host_hopping.yml  lateral_movement_psexec.yml  lateral_movement_rdp_privileged.yml  lateral_movement_wmi.yml  lsass_access.yml  macro_enabled_attachment.yml  office_spawns_shell.yml  phishing_link_click.yml  powershell_encoded_command.yml  ransom_note_dropped.yml  ransomware_extension_burst.yml  rare_process_ancestry.yml  repeat_c2_infrastructure_reuse.yml  sensitive_privilege_use.yml
docs/: 23DCE081_Internship_PPT.pptx  ARCHITECTURE.md  EVALUATION.md  SCALABILITY.md  SECURITY.md
docs/adr/: 0001-graph-plus-search-storage.md  0002-llm-not-primary-detector.md  0003-offline-rl-first.md  0004-evidence-grounding.md  0005-mvp-to-production-scale.md
docs/openapi/: gateway.yaml
docs/screenshot-demo/: README.md  app.js  index.html  styles.css
docs/threat-model/: THREAT_MODEL.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
infra/k8s/: 00-namespace.yaml  01-configmap.yaml  02-secrets.example.yaml  hpa.yaml  (+17 more)
scripts/: evaluate_detection.py  evaluate_llm_groundedness.py  format_report.py  generate_internship_ppt.py  generate_report.py  generate_samples.py  load_test_ingest.py  replay_scenario.py  requirements.txt  run_sync_gateway.py  seed_demo.py
(+167 files in other folders)
